<resources>
    <string name="app_name">BurgerMeStock</string>
    <string name="cone_de_cadeado">Ícone de cadeado</string>
    <string name="icone_de_uma_pessoa">icone de uma pessoa</string>
    <string name="usu_rio">Usuário</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="icone_de_uma_carta_de_email">icone de uma carta de email</string>
    <string name="nome_de_usu_rio">Nome de usuário</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="insira_o_e_mail_da_sua_conta_para_enviarmos_o_c_digo_de_recupera_o">Insira o e-mail da sua conta para enviarmos o código de recuperação</string>
    <string name="recuperar_conta">Recuperar conta</string>
</resources>