<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CriarContaActivity">

    <ImageView
        android:id="@+id/idBtnVoltarCriarConta"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/baseline_arrow_back"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:gravity="center_horizontal|center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/avocadobold"
            android:gravity="center_horizontal"
            android:text="@string/criar_conta"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idTextoCriarContaEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:hint="@string/e_mail"
            app:startIconContentDescription="@string/icone_de_uma_carta_de_email"
            app:startIconDrawable="@drawable/baseline_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/avocadoregular" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idTextoCriarContaUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/nome_de_usu_rio"
            app:startIconContentDescription="@string/icone_de_uma_pessoa"
            app:startIconDrawable="@drawable/baseline_person">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/avocadoregular" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idTextoCriarContaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/senha"
            app:endIconMode="password_toggle"
            app:startIconContentDescription="@string/cone_de_cadeado"
            app:startIconDrawable="@drawable/baseline_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avocadoregular"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idTextoCriarContaConfirmarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/confirmar_senha"
            app:endIconMode="password_toggle"
            app:startIconContentDescription="@string/cone_de_cadeado"
            app:startIconDrawable="@drawable/baseline_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avocadoregular"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/avocadoregular"
            android:text="Entrar" />

    </LinearLayout>


</LinearLayout>

