<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/idImagemSplash"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/avocadobold"
        android:gravity="center_horizontal"
        android:text="KeepIt"
        android:textSize="28sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:hint="@string/usu_rio"
        app:startIconContentDescription="@string/icone_de_uma_pessoa"
        app:startIconDrawable="@drawable/baseline_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idTextoUsuario"
            android:layout_width="match_parent"
            android:fontFamily="@font/avocadoregular"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/senha"
        app:endIconMode="password_toggle"
        app:startIconContentDescription="@string/cone_de_cadeado"
        app:startIconDrawable="@drawable/baseline_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idTextoSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avocadoregular"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLoginEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/avocadoregular"
            android:text="Entrar"
            />

        <Button
            android:id="@+id/btnLoginEsqueceuSenha"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLoginEntrar"
            android:layout_alignLeft="@id/btnLoginEntrar"
            android:fontFamily="@font/avocadoregular"
            android:text="Esqueceu sua senha?" />

        <Button
            android:id="@+id/btnLoginCriarConta"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLoginEntrar"
            android:layout_alignRight="@id/btnLoginEntrar"
            android:fontFamily="@font/avocadoregular"
            android:text="Criar conta" />


    </RelativeLayout>


</LinearLayout>